build_error.log
    Checking hidemaru_clone v0.1.0 (C:\Users\tetsu\vscode\hidemaru-editor\hidemaru_clone)
error[E0425]: cannot find type `FindDialogUi` in module `find_dialog`
   --> src\main.rs:126:49
    |
126 |     find_dialog_ui: RefCell<Option<find_dialog::FindDialogUi>>,
    |                                                 ^^^^^^^^^^^^
    |
   ::: src\find_dialog.rs:7:1
    |
  7 | pub struct FindDialog {
    | --------------------- similarly named struct `FindDialog` defined here
    |
note: struct `crate::find_dialog::find_dialog_ui::FindDialogUi` exists but is inaccessible
   --> src\find_dialog.rs:6:19
    |
  6 | #[derive(Default, NwgUi)]
    |                   ^^^^^ not accessible
    = note: this error originates in the derive macro `NwgUi` (in Nightly builds, run with -Z macro-backtrace for more info)
help: a struct with a similar name exists
    |
126 -     find_dialog_ui: RefCell<Option<find_dialog::FindDialogUi>>,
126 +     find_dialog_ui: RefCell<Option<find_dialog::FindDialog>>,
    |

warning: unused import: `std::rc::Rc`
 --> src\main.rs:7:5
  |
7 | use std::rc::Rc;
  |     ^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0308]: mismatched types
    --> src\main.rs:246:74
     |
 246 |         unsafe { SendMessageW(self.text_box.handle.hwnd().unwrap() as _, EM_SETSEL, 0, -1_isize); }
     |                  ------------ arguments to this function are incorrect   ^^^^^^^^^ expected `u32`, found `u16`
     |
note: function defined here
    --> C:\Users\tetsu\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\winapi-0.3.9\src\um\winuser.rs:1992:12
     |
1992 |     pub fn SendMessageW(
     |            ^^^^^^^^^^^^
help: you can convert a `u16` to a `u32`
     |
 246 |         unsafe { SendMessageW(self.text_box.handle.hwnd().unwrap() as _, EM_SETSEL.into(), 0, -1_isize); }
     |                                                                                   +++++++

Some errors have detailed explanations: E0308, E0425.
For more information about an error, try `rustc --explain E0308`.
warning: `hidemaru_clone` (bin "hidemaru_clone") generated 1 warning
error: could not compile `hidemaru_clone` (bin "hidemaru_clone") due to 2 previous errors; 1 warning emitted
